# Network-Lockstep

./: .gitignore
Assets/Art/: player1.mat  player2.mat
Assets/Prefab/: Button.prefab  Player-2.prefab  StateButton.prefab  SubMessagePanel.prefab
Assets/Protobuf/: ConnectMessage.cs  GameMessage.cs  LobbyMessage.cs  SyncMessage.cs  Test.cs  UnityMath.cs
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: Test.cs
Assets/Scripts/GamePlay/: GameSync.cs  Player.cs  PlayerController.cs
Assets/Scripts/Network/: FixedPoint.cs  MessageDispatcher.cs  NetworkManager.cs  Signals.cs  TcpEndPoint.cs  TcpSocket.cs  TimerHandle.cs  UdpSocket.cs
Assets/Scripts/UI/: ButtonClick.cs  ControlButton.cs  LobbyPanel.cs  MessagePanel.cs  NetworkPanel.cs  StatusControl.cs  StatusPanel.cs  SubMessagePanel.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/Settings/PlayMode/: 1.asset  2Players.asset  4Players.asset
Assets/TextMesh Pro/Fonts/: SourceHanSansSC-Heavy SDF.asset
Assets/TextMesh Pro/Resources/: TMP Settings.asset
ProjectSettings/: ProjectSettings.asset
Server/: CMakeLists.txt  Client.cpp  Client.h  GameServer.cpp  GameServer.h  Logger.cpp  Logger.h  LoggerStream.cpp  LoggerStream.h  NetworkDispatcher.cpp  NetworkDispatcher.h  TcpServer.cpp  TcpServer.h  UDPServer.cpp  UDPServer.h  UdpServer.cpp  UdpServer.h  main.cpp
Server/Lobby/: LobbyManager.cpp  LobbyManager.h  PlayerManager.cpp  PlayerManager.h  Room.cpp  Room.h  RoomManager.cpp  RoomManager.h
Server/Network/: NetworkDispatcher.cpp  NetworkDispatcher.h  TcpServer.cpp  TcpServer.h  UdpServer.cpp  UdpServer.h
Server/protobuf/: proto.bat
Server/protobuf/output/: ConnectMessage.pb.cc  ConnectMessage.pb.h  GameMessage.pb.cc  GameMessage.pb.h  LobbyMessage.pb.cc  LobbyMessage.pb.h  SyncMessage.pb.cc  SyncMessage.pb.h  UnityMath.pb.cc  UnityMath.pb.h  test.pb.cc  test.pb.h
Server/protobuf/proto/: ConnectMessage.proto  GameMessage.proto  LobbyMessage.proto  SyncMessage.proto  UnityMath.proto  test.proto
